--- a/H1EmuLauncher/Language/StringResources.hr-HR.xaml
+++ b/H1EmuLauncher/Language/StringResources.hr-HR.xaml
@@ -83,7 +83,7 @@
     <system:String x:Key="item95">Došlo je do pogreške pri instalaciji 2015 patcha:</system:String>
     <system:String x:Key="item96">Došlo je do pogreške pri instalaciji 2016 patcha:</system:String>
     <system:String x:Key="item99">Raspakiravanje patch datoteka...</system:String>
-    <system:String x:Key="item100">Brisanje .zip datoteke...</system:String>
+    <system:String x:Key="item100">Brisanje starih datoteka...</system:String>
     <system:String x:Key="item101">Zadatak izvršen. (Proteklo vrijeme:</system:String>
     <system:String x:Key="item102">Patch datoke za verziju 2015 su završili sa instalacijom.</system:String>
     <system:String x:Key="item103">Patch datoke za verziju 2016 su završili sa instalacijom.</system:String>
