--- a/H1EmuLauncher/SettingsPages/Options.xaml
+++ b/H1EmuLauncher/SettingsPages/Options.xaml
@@ -49,12 +49,21 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="auto"/>
                 </Grid.ColumnDefinitions>
-                
+
                 <TextBlock VerticalAlignment="Center"
                            Margin="20"
                            Foreground="FloralWhite"
                            TextWrapping="Wrap"
-                           Text="{DynamicResource item200}"/>
+                           Text="{DynamicResource item200}">
+
+                    <TextBlock.Effect>
+                        <DropShadowEffect BlurRadius="8"
+                                          Direction="-90"
+                                          RenderingBias="Quality"
+                                          ShadowDepth="1"
+                                          Opacity="0.3"/>
+                    </TextBlock.Effect>
+                </TextBlock>
 
                 <Grid Grid.Column="2">
 
@@ -110,7 +119,16 @@
             <Rectangle Grid.Row="2"
                        Margin="20,0,20,0"
                        Height="1"
-                       Fill="#FF2A2A32"/>
+                       Fill="#FF2A2A32">
+
+                <Rectangle.Effect>
+                    <DropShadowEffect BlurRadius="8"
+                                      Direction="-90"
+                                      RenderingBias="Quality"
+                                      ShadowDepth="1"
+                                      Opacity="0.3"/>
+                </Rectangle.Effect>
+            </Rectangle>
 
             <!-- Display image carousel option -->
             <Grid Grid.Row="3">
@@ -118,12 +136,21 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="auto"/>
                 </Grid.ColumnDefinitions>
-                
+
                 <TextBlock VerticalAlignment="Center"
                            Margin="20"
                            Foreground="FloralWhite"
                            TextWrapping="Wrap"
-                           Text="{DynamicResource item201}"/>
+                           Text="{DynamicResource item201}">
+
+                    <TextBlock.Effect>
+                        <DropShadowEffect BlurRadius="8"
+                                          Direction="-90"
+                                          RenderingBias="Quality"
+                                          ShadowDepth="1"
+                                          Opacity="0.3"/>
+                    </TextBlock.Effect>
+                </TextBlock>
 
                 <ToggleButton x:Name="imageCarouselToggleButton"
                               Grid.Column="2"
@@ -149,7 +176,16 @@
             <Rectangle Grid.Row="4"
                        Margin="20,0,20,0"
                        Height="1"
-                       Fill="#FF2A2A32"/>
+                       Fill="#FF2A2A32">
+
+                <Rectangle.Effect>
+                    <DropShadowEffect BlurRadius="8"
+                                      Direction="-90"
+                                      RenderingBias="Quality"
+                                      ShadowDepth="1"
+                                      Opacity="0.3"/>
+                </Rectangle.Effect>
+            </Rectangle>
 
             <!-- Automatically minimise launcher to system tray option -->
             <Grid Grid.Row="5">
@@ -157,12 +193,21 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="auto"/>
                 </Grid.ColumnDefinitions>
-                
+
                 <TextBlock VerticalAlignment="Center"
                            Margin="20"
                            Foreground="FloralWhite"
                            TextWrapping="Wrap"
-                           Text="{DynamicResource item202}"/>
+                           Text="{DynamicResource item202}">
+
+                    <TextBlock.Effect>
+                        <DropShadowEffect BlurRadius="8"
+                                          Direction="-90"
+                                          RenderingBias="Quality"
+                                          ShadowDepth="1"
+                                          Opacity="0.3"/>
+                    </TextBlock.Effect>
+                </TextBlock>
 
                 <ToggleButton x:Name="autoMinimiseToggleButton"
                               Grid.Column="2"
@@ -188,7 +233,16 @@
             <Rectangle Grid.Row="6"
                        Margin="20,0,20,0"
                        Height="1"
-                       Fill="#FF2A2A32"/>
+                       Fill="#FF2A2A32">
+
+                <Rectangle.Effect>
+                    <DropShadowEffect BlurRadius="8"
+                                      Direction="-90"
+                                      RenderingBias="Quality"
+                                      ShadowDepth="1"
+                                      Opacity="0.3"/>
+                </Rectangle.Effect>
+            </Rectangle>
 
             <!-- Current launcher version -->
             <Grid Grid.Row="7">
@@ -201,14 +255,32 @@
                            Margin="20"
                            Foreground="FloralWhite"
                            TextWrapping="Wrap"
-                           Text="{DynamicResource item124}"/>
+                           Text="{DynamicResource item124}">
+
+                    <TextBlock.Effect>
+                        <DropShadowEffect BlurRadius="8"
+                                          Direction="-90"
+                                          RenderingBias="Quality"
+                                          ShadowDepth="1"
+                                          Opacity="0.3"/>
+                    </TextBlock.Effect>
+                </TextBlock>
 
                 <TextBlock x:Name="currentVersionNumber"
                            Grid.Column="2"
                            Margin="20"
                            Foreground="FloralWhite"
                            VerticalAlignment="Center"
-                           HorizontalAlignment="Right"/>
+                           HorizontalAlignment="Right">
+
+                    <TextBlock.Effect>
+                        <DropShadowEffect BlurRadius="8"
+                                          Direction="-90"
+                                          RenderingBias="Quality"
+                                          ShadowDepth="1"
+                                          Opacity="0.3"/>
+                    </TextBlock.Effect>
+                </TextBlock>
             </Grid>
         </Grid>
     </Border>
