--- a/H1EmuLauncher/SteamFramePages/2FA.xaml
+++ b/H1EmuLauncher/SteamFramePages/2FA.xaml
@@ -120,6 +120,15 @@
                    Margin="10,0,0,0"
                    VerticalAlignment="Top"
                    TextWrapping="Wrap"
-                   Text="{DynamicResource item78}"/>
+                   Text="{DynamicResource item78}">
+
+            <TextBlock.Effect>
+                <DropShadowEffect BlurRadius="8"
+                                  Direction="-90"
+                                  RenderingBias="Quality"
+                                  ShadowDepth="1"
+                                  Opacity="0.3"/>
+            </TextBlock.Effect>
+        </TextBlock>
     </Grid>
 </UserControl>
