--- a/H1EmuLauncher/Windows/AddServerWindow.xaml
+++ b/H1EmuLauncher/Windows/AddServerWindow.xaml
@@ -199,7 +199,16 @@
                         <Rectangle Grid.Row="3"
                                    Margin="20,0,20,0"
                                    Height="1"
-                                   Fill="#FF2A2A32"/>
+                                   Fill="#FF2A2A32">
+
+                            <Rectangle.Effect>
+                                <DropShadowEffect BlurRadius="8"
+                                                  Direction="-90"
+                                                  RenderingBias="Quality"
+                                                  ShadowDepth="1"
+                                                  Opacity="0.3"/>
+                            </Rectangle.Effect>
+                        </Rectangle>
 
                         <Grid Grid.Row="4"
                               HorizontalAlignment="Center">
