--- a/H1EmuLauncher/Windows/SplashWindow.xaml
+++ b/H1EmuLauncher/Windows/SplashWindow.xaml
@@ -55,7 +55,16 @@
                        VerticalAlignment="Center"
                        TextAlignment="Center"
                        FontSize="30"
-                       Text="{DynamicResource item48}"/>
+                       Text="{DynamicResource item48}">
+
+                <TextBlock.Effect>
+                    <DropShadowEffect BlurRadius="8"
+                                      Direction="-90"
+                                      RenderingBias="Quality"
+                                      ShadowDepth="1"
+                                      Opacity="0.3"/>
+                </TextBlock.Effect>
+            </TextBlock>
 
             <!-- Divider -->
             <ProgressBar Grid.Row="1"
@@ -80,7 +89,16 @@
                        Margin="30,10,30,10"
                        TextAlignment="Center"
                        VerticalAlignment="Center"
-                       Text="{DynamicResource item4}"/>
+                       Text="{DynamicResource item4}">
+
+                <TextBlock.Effect>
+                    <DropShadowEffect BlurRadius="8"
+                                      Direction="-90"
+                                      RenderingBias="Quality"
+                                      ShadowDepth="1"
+                                      Opacity="0.3"/>
+                </TextBlock.Effect>
+            </TextBlock>
         </Grid>
     </Grid>
 </Window>
